--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
       </tbody>
     </table>
     <hr>
-    <p><a href="C:\Users\HAJ TAHER\Desktop\Web Development\HTML - Personal Site\communicate.html">Communicate</a></p>
+    <p><a href="communicate.html">Communicate</a></p>
   </body>
 </html>
     
