--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
       </tbody>
     </table>
     <hr>
-    <p><a href="communicate.html">Communicate</a></p>
+    <a href="communicate.html">Communicate</a>
   </body>
 </html>
     
