--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <hr>
     <h3>Skills</h3>
     <ul>
-        <li>Prpgramming</li>
+        <li>Programming</li>
         <ul>
             <li>Html</li>
             <li>CSS</li>
